--- a/paper/CADE/sources.bib
+++ b/paper/CADE/sources.bib
@@ -399,10 +399,13 @@ author = {Domenico Cantone and Jacob T. Schwartz and Calogero G. Zarba},
   ISSN    = {2150-914x},
 }
 
-@online{formalisation,
-  author = {Lukas Stevens},
-  title = {Formalisation of a Decision Procedure for {MLSS}},
-  year = {2023},
-  url = {https://github.com/lukasstevens/set-decision-procedure/tree/CADE_Artifact},
-  note = {{Formal} proof development}
+@article{formalisation,
+  author  = {Lukas Stevens},
+  title   = {MLSS Decision Procedure},
+  journal = {Archive of Formal Proofs},
+  month   = {May},
+  year    = {2023},
+  note    = {\url{https://isa-afp.org/entries/MLSS_Decision_Proc.html},
+            Formal proof development},
+  ISSN    = {2150-914x},
 }
